# DiamondPad

./: Anchor.toml  README.md  package.json
examples/: basic-usage.ts
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Navbar.tsx  WalletProvider.tsx
frontend/src/pages/: Home.tsx  LaunchDetail.tsx  Launches.tsx  Staking.tsx
programs/diamondpad/: Cargo.toml
programs/diamondpad/src/: lib.rs
public/: index.html
scripts/: demo.sh
src/: cli.ts  index.ts  server.ts
src/db/: index.ts
src/detector/: bundle.ts  graph.ts
src/rewards/: diamond.ts
src/types/: index.ts
