[package]
name = "diamondpad"
version = "0.1.0"
description = "DiamondPad - The launchpad that rewards believers, not flippers"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "diamondpad"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
